--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,8 @@
       "matchCurrentVersion": "!/^0/",
       "automerge": true
     }
-  ]
+  ],
+
+  "commitMessageTopic": "",
+  "commitMessageExtra": ""
 }
